sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:2: error: class Array takes type parameters
def bubbleSort(n:Array)  {
                 ^AlgBubbleSort1:2: error: class Array takes type parameters
def bubbleSort(n:Array)  {
                 ^