sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(n:Array)  {
  var echanges:Boolean=true;

  while(echanges==true){
    echanges=false;
    for(i<-0 to n.length-1){
    	if (isSmaller(i+1,i)){
        echanges=true
      	swap(i,i+1)
    	}
  	}
	}
}

